# sonic-ir

./: README.md  sonic-ir.cabal
src/Language/Sonic/Compiler/: IR.hs
src/Language/Sonic/Compiler/IR/: Attribute.hs  Declaration.hs  EntityKind.hs  Expression.hs  Kind.hs  Literal.hs  Module.hs  Pattern.hs  Tree.hs  Type.hs
